--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             gap: 2rem;
         }
 
+        /* Photo styling */
         .profile-photo {
             width: 200px;
             height: 200px;
@@ -378,7 +379,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-             <img src="assets/img/arif-headshot.jpg" alt="Arif Ahmed Professional Headshot" class="profile-photo"> 
+            <!-- Uncomment the line below once you upload your photo to assets/img/arif-headshot.jpg -->
+            <!-- <img src="assets/img/arif-headshot.jpg" alt="Arif Ahmed Professional Headshot" class="profile-photo"> -->
             <div class="hero-text">
                 <h1>Hi, I'm Arif Ahmed</h1>
                 <p class="tagline">ITI & DCIM Student at Rutgers University–New Brunswick</p>
