--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     <section class="hero">
         <div class="hero-content">
            <!-- <Uncomment the line below once you upload your photo to assets/img/arif-headshot.jpg-->
-            <img src="assets/img/arif-headshot.jpg" alt="Arif Ahmed Professional Headshot" class="profile-photo"> 
+            <img src="assets/img/arif-headshot.jpeg" alt="Arif Ahmed Professional Headshot" class="profile-photo"> 
             <div class="hero-text">
                 <h1>Hi, I'm Arif Ahmed</h1>
                 <p class="tagline">ITI & DCIM Student at Rutgers University–New Brunswick</p>
