--- a/experience.html
+++ b/experience.html
@@ -210,7 +210,7 @@
     <div class="container">
         <h1>Experience</h1>
 
-        <a href="assets/docs/Arif_Ahmed_Resume.pdf" class="resume-download" download>📄 Download My Resume (PDF)</a>
+        <a href="assets/docs/Arif_Ahmed_ Resume.pdf" class="resume-download" download>📄 Download My Resume (PDF)</a>
 
         <div class="education-box">
             <h3>🎓 Rutgers University–New Brunswick</h3>
